--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -47,7 +47,7 @@
     </div>
 
     <!--Lệnh if để ẩn-->
-    <div *ngIf="isRoleConfigExpirationDay && !isRoleConfigExpirationDay">
+    <div *ngIf="isRoleConfigExpirationDay">
         <div class="sms-header">
             {{'config.day.expiration' | translate}}
         </div>
