--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -53,7 +53,7 @@
                 </div>
               </div>
             </div>
-            <div class="participants__name" >
+            <div class="participants__name">
               <div class="label_detail text-color" *ngIf="this.id_sign_type !== 2">
                 <div>
                   <input type="radio" (change)="changeTypeSign(1)" name="checkPhoneMailOrgSigner_"
@@ -97,6 +97,7 @@
         <div *ngIf="this.site == 'KD'" class="participants--input" style="display: flex">
           <div class="participants__name" style="width: 93%" *ngIf="isCheckRadio">
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+            <!-- <div class="input-data" style="width: 82%;"> -->
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
               <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email"
@@ -108,12 +109,32 @@
           </div>
 
           <div class="participants__name" style="width: 93%" *ngIf="!isCheckRadio">
-            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span>
+            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;
+              <span class="required-title">*</span>
             </div>
-            <div class="input-data">
-              <img class="input-img">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" />
-            </div>
+            <!-- <div style="display: flex; justify-content: space-between;"> -->
+              <!-- <div class="input-data" style="width: 72%;"> -->
+              <div class="input-data">
+                <img class="input-img">
+                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" />
+              </div>
+              <!-- <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown dropdownSMS"
+                [class.db_icon_vietnam]="locale == 'vi'" [class.db_icon_english]="locale == 'en'">
+                <div class="btn btn-outline-primary DropdownToggleSMS" id="dropdownMenu1" ngbDropdownToggle></div>
+                <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                  <div class="switch-language">
+                    <div class="db_icon_vietnam" ngbDropdownItem (click)="locale = 'vi'">
+                      <div class="language">{{ "vie" | translate }}</div>
+                    </div>
+                  </div>
+                  <div class="switch-language">
+                    <div class="db_icon_english" ngbDropdownItem (click)="locale = 'en'">
+                      <div class="language">{{ "eng" | translate }}</div>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+            <!-- </div> -->
             <div class="invalid" *ngIf="errorPhone!=''">
               {{errorPhone | translate}}
             </div>
@@ -138,10 +159,30 @@
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;
               <div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div>
             </div>
-            <div class="input-data">
-              <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" value="{{this.phone}}">
-            </div>
+            <!-- <div style="display: flex; justify-content: space-between;"> -->
+              <!-- <div class="input-data" style="width: 72%;"> -->
+              <div class="input-data">
+                <img src="assets/img/login_email.svg" class="input-img">
+                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" value="{{this.phone}}">
+              </div>
+              <!-- <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown dropdownSMS"
+                [class.db_icon_vietnam]="locale == 'vi'" [class.db_icon_english]="locale == 'en'"
+                style="margin-right: 11.5%;">
+                <div class="btn btn-outline-primary DropdownToggleSMS" id="dropdownMenu1" ngbDropdownToggle></div>
+                <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                  <div class="switch-language">
+                    <div class="db_icon_vietnam" ngbDropdownItem (click)="locale = 'vi'">
+                      <div class="language">{{ "vie" | translate }}</div>
+                    </div>
+                  </div>
+                  <div class="switch-language">
+                    <div class="db_icon_english" ngbDropdownItem (click)="locale = 'en'">
+                      <div class="language">{{ "eng" | translate }}</div>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+            <!-- </div> -->
             <div class="invalid" *ngIf="errorPhone!=''">
               {{errorPhone | translate}}
             </div>
@@ -150,12 +191,32 @@
 
         <div *ngIf="this.site == 'NB' && !isCheckRadio" class="participants--input" style="display: flex">
           <div class="participants__name" style="width:93%">
-            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span>
+            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;
+              <span class="required-title">*</span>
             </div>
-            <div class="input-data">
-              <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone">
-            </div>
+            <!-- <div style="display: flex; justify-content: space-between;"> -->
+              <!-- <div class="input-data" style="width: 72%;"> -->
+              <div class="input-data">
+                <img src="assets/img/login_email.svg" class="input-img">
+                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone">
+              </div>
+              <!-- <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown dropdownSMS"
+                [class.db_icon_vietnam]="locale == 'vi'" [class.db_icon_english]="locale == 'en'">
+                <div class="btn btn-outline-primary DropdownToggleSMS" id="dropdownMenu1" ngbDropdownToggle></div>
+                <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                  <div class="switch-language">
+                    <div class="db_icon_vietnam" ngbDropdownItem (click)="locale = 'vi'">
+                      <div class="language">{{ "vie" | translate }}</div>
+                    </div>
+                  </div>
+                  <div class="switch-language">
+                    <div class="db_icon_english" ngbDropdownItem (click)="locale = 'en'">
+                      <div class="language">{{ "eng" | translate }}</div>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+            <!-- </div> -->
             <div class="invalid" *ngIf="errorPhone!=''">
               {{errorPhone | translate}}
             </div>
@@ -169,6 +230,7 @@
                 class="required-title">*</span>
               <div style="color: #ffc107;">({{'info.token' | translate}})</div>
             </div>
+            <!-- <div class="input-data" style="width: 82%;"> -->
             <div class="input-data">
               <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="card_id"
                 oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
@@ -186,6 +248,7 @@
               <span class="required-title">*</span>
               <div style="color: #ffc107;">({{'info.hsm' | translate}})</div>
             </div>
+            <!-- <div class="input-data" style="width: 82%;"> -->
             <div class="input-data">
               <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="card_id"
                 oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
@@ -200,12 +263,32 @@
         <div class="participants--input" style="display: flex"
           *ngIf="this.site == 'KD' && id_sign_type == 1 && isCheckRadio">
           <div class="participants__name" style="width: 93%">
-            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span>
+            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;
+              <span class="required-title">*</span>
             </div>
-            <div class="input-data">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone"
-                oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
-            </div>
+            <!-- <div style="display: flex; justify-content: space-between;"> -->
+              <!-- <div class="input-data" style="width: 72%;"> -->
+              <div class="input-data">
+                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone"
+                  oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+              </div>
+              <!-- <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown dropdownSMS"
+                [class.db_icon_vietnam]="locale == 'vi'" [class.db_icon_english]="locale == 'en'">
+                <div class="btn btn-outline-primary DropdownToggleSMS" id="dropdownMenu1" ngbDropdownToggle></div>
+                <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                  <div class="switch-language">
+                    <div class="db_icon_vietnam" ngbDropdownItem (click)="locale = 'vi'">
+                      <div class="language">{{ "vie" | translate }}</div>
+                    </div>
+                  </div>
+                  <div class="switch-language">
+                    <div class="db_icon_english" ngbDropdownItem (click)="locale = 'en'">
+                      <div class="language">{{ "eng" | translate }}</div>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+            <!-- </div> -->
             <div class="invalid" *ngIf="errorPhone!=''">
               {{errorPhone | translate}}
             </div>
@@ -217,6 +300,7 @@
           <div class="participants__name" style="width: 93%">
             <div class="label_detail text-color">{{'cardId' | translate}}&nbsp;<span class="required-title">*</span>
             </div>
+            <!-- <div class="input-data" style="width: 82%;"> -->
             <div class="input-data">
               <input type="text" placeholder="{{'enter.cardId' | translate}}" [(ngModel)]="card_id"
                 oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
