them so hop dong + nguoi tao hop dong (dang an)

--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -19,6 +19,14 @@
   cursor: pointer;
 }
 
+.item_contract_created{
+  color: #666666;
+  font-size: 13px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .item_contract_infor{
   color: #666666;
 }
