--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -23,6 +23,14 @@
   color: #666666;
 }
 
+.item_contract_created{
+  color: #666666;
+  font-size: 13px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .status_blue{
   color: #027e21;
 }
