fix button batch

--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -139,7 +139,7 @@
 
         </div>
     </div>
-    <div class="col-md-9" style="position: absolute; display: flex; justify-content: flex-end; width: 82%!important">
+    <div class="col-md-9" style="position: absolute; display: flex; justify-content: flex-end; width: 82%!important; z-index: -1">
       <!-- <a style="position: relative;">
         <button type="button" name="next" class="next action-button" style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
       </a> -->
