--- a/src/app/main/customer/customer-add/customer-add.component.html
+++ b/src/app/main/customer/customer-add/customer-add.component.html
@@ -31,7 +31,7 @@
                     <div class="col-md-10 participants__content--input">
                         <div class="participants--input" style="display: flex">
                             <div class="participants__name">
-                                <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;</div>
+                                <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span style="color: red">*</span></div>
                                 <div class="input-data">
                                     <img src="assets/img/icon_name.svg" class="input-img">
                                     <input type="text" [(ngModel)]="d.name" placeholder="{{'nhap_ho_va_ten' | translate}}">
@@ -39,7 +39,7 @@
                             </div>
 
                             <div class="participants__name">
-                                <div class="label_detail text-color">Email
+                                <div class="label_detail text-color">Email<span style="color: red">*</span>
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/login_email.svg" class="input-img">
