--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -59,8 +59,7 @@
                           <option value="" hidden>{{isEnableText || isChangeText ? ('choose.importer' | translate) : ('choose.signer' | translate)}}</option>
                           <option *ngFor="let d of this.list_sign_name, let i = index" [selected]="d.selected" value="{{d.id}}" [disabled]="d.is_disable">{{getName(d)}}</option>
                         </select>
-                        <div *ngIf="isEnableText && showSignClear" style="position: absolute; top: 50%; right: 32px; transform: translateY(-50%); display: flex; align-items: center; cursor: pointer" (click)="clearSign()">
-                          <!-- <img src="../../../../../../assets/img/close.svg" style="width: 16px"> -->
+                        <div *ngIf="(isEnableText || isChangeText) && showSignClear" style="position: absolute; top: 50%; right: 32px; transform: translateY(-50%); display: flex; align-items: center; cursor: pointer" (click)="clearSign()">
                           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="15px" stroke="#000000" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M18 6L6 18M6 6l12 12"></path>
                           </svg>
