--- a/src/app/main/customer/customer-add/customer-add.component.html
+++ b/src/app/main/customer/customer-add/customer-add.component.html
@@ -39,7 +39,7 @@
                             </div>
 
                             <div class="participants__name">
-                                <div class="label_detail text-color">Email<span style="color: red">*</span>
+                                <div class="label_detail text-color">Email&nbsp;<span style="color: red">*</span>
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/login_email.svg" class="input-img">
