--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -139,7 +139,16 @@
         </div>
 
         <div class="contract_footer">
-            <div class="footer_title"></div>
+            <div class="footer_contract_per_page">
+                <div>Hiển thị&nbsp;</div>
+                <select (change)="changePageNumber($event)">
+                    <option value="" hidden>10</option>
+                    <option *ngFor="let d of this.pageOptions">{{d}}</option>
+                </select>
+                <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+            </div>
+            <div class="footer_title">
+            </div>
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
             </div>
@@ -152,7 +161,7 @@
 </div>
 
 <!--Truong hop khac-->
-<div *ngIf="!((this.filter_status == 20 || this.filter_status == 33 || this.filter_status == 30) && this.isOrg == 'off')" class="container-fluid">
+<div *ngIf="!((this.filter_status == 20 || this.filter_status == 33 || this.filter_status == 30) && this.isOrg == 'off')&& this.typeDisplay !='release'" class="container-fluid">
     <ng-template [ngIf]="!roleMess">
         <div class="col-md-12" style="padding-top: 20px;">
             <div class="input-line search">
@@ -162,9 +171,9 @@
             </div>
         </div>
 
-        <!-- <div class="col-md-1 btn_search" style="padding-top: 10px;">
+        <div class="col-md-1 btn_search" style="padding-top: 10px;">
             <button *ngIf="status == 'draft'" (click)="release()" class="btn btn-lg btn-block btn_submit">{{'release'|translate}}</button>
-        </div> -->
+        </div>
 
         <div class="row list_header" *ngIf="pageTotal > 0;">
             <div class="col-md-4"></div>
@@ -269,6 +278,14 @@
         </div>
 
         <div class="contract_footer">
+            <div class="footer_contract_per_page">
+                <div>Hiển thị&nbsp;</div>
+                <select (change)="changePageNumber($event)">
+                    <option value="" hidden>10</option>
+                    <option *ngFor="let d of this.pageOptions">{{d}}</option>
+                </select>
+                <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+            </div>
             <div class="footer_title"></div>
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
@@ -398,6 +415,14 @@
         </div>
 
         <div class="contract_footer">
+            <div class="footer_contract_per_page">
+                <div>Hiển thị&nbsp;</div>
+                <select (change)="changePageNumber($event)">
+                    <option value="" hidden>10</option>
+                    <option *ngFor="let d of this.pageOptions">{{d}}</option>
+                </select>
+                <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+            </div>
             <div class="footer_title"></div>
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
@@ -528,6 +553,156 @@
                                 <div class="col-md-1 calendar_create">
                                     <div>
                                         <input name="item" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownload(item)" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+                <div style="display: table-cell;vertical-align: middle;">
+                    <img src="../../../assets/img/empty_data.svg" />
+                    <div style="color: #94A7C6">{{'no.data' | translate}}</div>
+                </div>
+            </div>
+
+            <div class="contract_footer">
+                <div class="footer_title"></div>
+                <div class="footer_pagination">
+                    <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; downloadMany()" previousLabel="" nextLabel=""></pagination-controls>
+                </div>
+                <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
+                </div>
+            </div>
+        </ng-template>
+
+        <div>{{roleMess | translate}}</div>
+    </div>
+</div>
+
+<div *ngIf="(this.typeDisplay == 'release' && this.filter_status == 0)">
+    <div class="container-fluid">
+        <ng-template [ngIf]="!roleMess">
+            <div class="col-md-12" style="padding-top: 20px;">
+                <div class="input-line search">
+                    <img src="../../assets/img/icon_search.svg" class="input-img" />
+                    <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}" (keyup)="autoSearch($event)" />
+                    <img src="../../assets/img/icon_search_group.svg" class="input-img" (click)="searchContract()" />
+                </div>
+            </div>
+
+            <div style="width: 100%; display: flex; flex-wrap: nowrap">
+                <div class="col-md-1 btn_search" style="padding-top: 10px;">
+                    <button class="btn btn-lg btn-block btn_submit">{{'release'|translate}}</button>
+                </div>
+                <div class="col-md-1 btn_search" style="padding-top: 10px; padding-left: 10px">
+                    <button (click)="cancelDownloadMany()" class="btn btn-lg btn-block btn_submit">{{'cancel'|translate}}</button>
+                </div>
+            </div>
+
+            <div class="row list_header" *ngIf="pageTotal > 0;">
+                <div class="col-md-4"></div>
+                <div class="col-md-2">{{'create-date' | translate}}</div>
+                <div class="col-md-2">{{'expiration-date' | translate}}</div>
+                <div class="col-md-3">{{'action' | translate}}</div>
+
+                <div *ngIf="this.filter_status == 0" class="col-md-1">
+                    <input style="margin-left: 4px;" id="allDownload" name="allDownload" type="checkbox" [(ngModel)]="checkedAll" (click)="toggleDownload(checkedAll)" />
+                </div>
+            </div>
+
+            <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}">
+                <div class="row">
+                    <!--Cột 1-->
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-11">
+                                <div class="item_contract_name">
+                                    <a class="item_contract_name" style="text-decoration: none;" (click)="isQLHD_07?openDetail(item.id):null" [routerLink]="['/main/form-contract/detail', item.id]" [queryParams]="{
+                                            'page': this.p,
+                                            'filter_type': this.filter_type, 
+                                            'filter_contract_no': this.filter_contract_no,
+                                            'filter_from_date': this.filter_from_date,
+                                            'filter_to_date': this.filter_to_date,
+                                            'isOrg': this.isOrg,
+                                            'organization_id': this.organization_id,
+                                            'status': this.status
+                                          }">
+                                        {{item.name}}
+                                    </a>
+                                </div>
+
+                                <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                                    <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="item_contract_infor">{{'contract.status' | translate}}:
+                                        <span class="status_blue">{{item.status | pipe | translate}}
+                                            {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
+                                            translate}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Cột 2: Ngày tạo-->
+                    <div class="col-md-2 calendar_create">
+                        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date:
+                                'dd/MM/yyyy HH:mm'}}</span></div>
+                    </div>
+
+                    <!--Cột 3: Ngày hết hạn ký-->
+                    <div class="col-md-2 calendar_deadline">
+                        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date:
+                                'dd/MM/yyyy'}}</span></div>
+                    </div>
+
+                    <!--Cột 4: Thao tác-->
+                    <div class="col-md-3 item_icon">
+                        <div style="display: flex; justify-content: center;">
+                            <!-- <div *ngIf="this.isOrg == 'off'"> -->
+                            <div class="div_icon" *ngIf="(status == 'draft' || status == 'processing' || status == 'expire' || status == 'overdue') && isQLHD_08 && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_copy.svg" class="img_icon" ngbTooltip="{{'contract.copy' | translate}}" (click)="openCopy(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'draft' && isQLHD_02 && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="openEdit(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'draft' && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_delete.svg" class="img_icon" ngbTooltip="{{'contract.delete' | translate}}" (click)="deleteContract(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'complete') && isQLHD_12 && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}" (click)="contractConnect(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'complete' && isQLHD_11 && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnectNew(item.id)" />
+                            </div>
+                            <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire') && isQLHD_09 && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_stop.svg" class="img_icon" ngbTooltip="{{'contract.cancel' | translate}}" (click)="cancelContract(item.id);" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'complete' && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13 && this.isOrg == 'off'">
+                                <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
+                            </div>
+                        </div>
+                        <div class="div_icon" *ngIf="status == 'cancel'">
+                            <!-- <img src="../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="{{'reasson.cancel.contract' | translate}}" (click)="ViewReasonCancel(item.id)" /> -->
+                            <img src="../../assets/img/cancel_notes.svg" class="img_icon" ngbTooltip="{{'reasson.cancel.contract' | translate}}" (click)="ViewReasonCancel(item.id)" />
+                        </div>
+                    </div>
+                    <!--Cột 5: Input checkbox-->
+                    <div class="col-md-1 item_icon" *ngIf="this.filter_status == 0">
+                        <div style="display: flex; justify-content: center;">
+                            <div class="div_icon">
+                                <div class="col-md-1 calendar_create">
+                                    <div>
+                                        <input name="item" type="checkbox" [(ngModel)]="item.checked" (click)="toggleRelease(item)" />
                                     </div>
                                 </div>
                             </div>
