--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<div *ngIf="this.mobile == false" class="all">
+<div id="all" *ngIf="this.mobile == false" class="all">
 
   <div class="full-height d-flex flex-row">
     <div class="left-background"></div>
@@ -31,98 +31,100 @@
         </div>
       </div>
       <div class="login-form">
-        <div class="small-logo d-flex flex-column justify-content-center">
-          <div>
-            <img
-              src="../../assets/img/logo_eContract_21.svg"
-              width="300px"
-              style="max-width: 50%"
-            />
+        <div id="login-form">
+          <div class="small-logo d-flex flex-column justify-content-center">
+            <div>
+              <img
+                src="../../assets/img/logo_eContract_21.svg"
+                width="300px"
+                style="max-width: 50%"
+              />
+            </div>
           </div>
-        </div>
-        <div class="input-form ng-touched ng-pristine ng-invalid">
-          <form class="form-signin" [formGroup]="loginForm">
-            <div *ngIf="type == 1" class="form-group note">
-              {{ "login.note.user" | translate }}
-            </div>
-            <div class="form-group">
-              <div class="input-line">
-                <img src="../../assets/img/login_user.svg" class="input-img" />
-                <input
-                  type="text"
-                  id="username"
-                  placeholder="{{ 'login.username' | translate }}"
-                  formControlName="username"
-                  class="input-text"
-                />
+          <div class="input-form ng-touched ng-pristine ng-invalid">
+            <form class="form-signin" [formGroup]="loginForm">
+              <div *ngIf="type == 1" class="form-group note">
+                {{ "login.note.user" | translate }}
               </div>
-            </div>
-
-            <div class="form-group">
-              <div class="input-line">
-                <img
-                  src="../../assets/img/login_password.svg"
-                  class="input-img"
-                />
-                <input
-                  [type]="fieldTextType ? 'text' : 'password'"
-                  placeholder="{{ 'login.password' | translate }}"
-                  formControlName="password"
-                  class="input-text"
-                />
-                <div class="icon-password">
-                  <i
-                    class="fa"
-                    [ngClass]="{
-                      'fa-eye-slash': !fieldTextType,
-                      'fa-eye': fieldTextType
-                    }"
-                    (click)="toggleFieldTextType()"
-                    style="color: #106db6"
-                  ></i>
+              <div class="form-group">
+                <div class="input-line">
+                  <img src="../../assets/img/login_user.svg" class="input-img" />
+                  <input
+                    type="text"
+                    id="username"
+                    placeholder="{{ 'login.username' | translate }}"
+                    formControlName="username"
+                    class="input-text"
+                  />
                 </div>
               </div>
-            </div>
 
-            <div class="form-group" *ngIf="captcha">
-              <label>Captcha</label>
-              <div id="preview" class="preview" #previewCaptcha></div>
-              <div class="input-line"> 
-                <input formControlName="captchaName" class="input-captcha" type="text" placeholder="{{'enter.captcha' | translate}}"/>
-                <button (click)="generateCaptcha()">
-                  <i class="fa fa-refresh"></i>
+              <div class="form-group">
+                <div class="input-line">
+                  <img
+                    src="../../assets/img/login_password.svg"
+                    class="input-img"
+                  />
+                  <input
+                    [type]="fieldTextType ? 'text' : 'password'"
+                    placeholder="{{ 'login.password' | translate }}"
+                    formControlName="password"
+                    class="input-text"
+                  />
+                  <div class="icon-password">
+                    <i
+                      class="fa"
+                      [ngClass]="{
+                        'fa-eye-slash': !fieldTextType,
+                        'fa-eye': fieldTextType
+                      }"
+                      (click)="toggleFieldTextType()"
+                      style="color: #106db6"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group" *ngIf="captcha">
+                <label>Captcha</label>
+                <div id="preview" class="preview" #previewCaptcha></div>
+                <div class="input-line"> 
+                  <input formControlName="captchaName" class="input-captcha" type="text" placeholder="{{'enter.captcha' | translate}}"/>
+                  <button (click)="generateCaptcha()">
+                    <i class="fa fa-refresh"></i>
+                  </button>
+                </div> 
+              </div>
+
+              <div *ngIf="this.type != 1" class="form-group forgot-password">
+                <a href="/forgot-password"
+                  >{{ "login.forgot_password" | translate }}?</a
+                >
+              </div>
+
+              <div class="form-group">
+                <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center">
+                  <strong>{{ errorDetail | translate }}</strong>
+                </p>
+              </div>
+
+              <div class="form-group sub-login">
+                <button class="btn btn-lg btn-block" (click)="loginUser()">
+                  {{ "login" | translate }}
                 </button>
-              </div> 
-            </div>
+              </div>
 
-            <div *ngIf="this.type != 1" class="form-group forgot-password">
-              <a href="/forgot-password"
-                >{{ "login.forgot_password" | translate }}?</a
-              >
-            </div>
-
-            <div class="form-group">
-              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center">
-                <strong>{{ errorDetail | translate }}</strong>
-              </p>
-            </div>
-
-            <div class="form-group sub-login">
-              <button class="btn btn-lg btn-block" (click)="loginUser()">
-                {{ "login" | translate }}
-              </button>
-            </div>
-
-            <div class="form-group sign-up">
-              <b>{{ "signup.not_account" | translate }}?</b>&nbsp;<a
-                href="/signup"
-                >{{ "signup" | translate }}</a
-              >
-            </div>
-          </form>
+              <div class="form-group sign-up">
+                <b>{{ "signup.not_account" | translate }}?</b>&nbsp;<a
+                  href="/signup"
+                  >{{ "signup" | translate }}</a
+                >
+              </div>
+            </form>
+          </div>
         </div>
 
-        <div class="slogan">
+        <div class="slogan" [ngStyle]="getStyleFooter()">
           <div class="bg-footer-login"></div>
         </div>
       </div>
