--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -139,10 +139,10 @@
 
         </div>
     </div>
-    <div  style="position: absolute; display: flex; margin-left: 75%">
-      <!-- <a style="position: relative;">
-        <button type="button" name="next" class="next action-button" style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
-      </a> -->
+    <div  style="position: absolute;display: flex;width: 20%;justify-content: flex-end;margin-left: 62%;">
+      <a style="position: relative;">
+        <button type="button" (click)="saveDraft()" name="next" class="next action-button" style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
+      </a>
       <a style="position: relative;">
         <button (click)="submit()" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
       </a>
