--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -57,7 +57,7 @@
 
                             <div class="row">
                                 <div class="item_contract_infor">{{'contract.status' | translate}}:
-                                    <span class="status_blue">{{item.status | pipe | translate}}
+                                    <span class="status_blue">{{this.filter_status | pipe | translate}}
                                         {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                         translate}}</span>
                                 </div>
@@ -141,7 +141,7 @@
         <div class="contract_footer">
             <div class="footer_contract_per_page">
                 <div>Hiển thị&nbsp;</div>
-                <select (change)="changePageNumber($event)">
+                <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
                     <option value="" hidden>{{this.page}}</option>
                     <option *ngFor="let d of this.pageOptions">{{d}}</option>
                 </select>
@@ -152,7 +152,7 @@
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
             </div>
-            <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}
+            <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} 
             </div>
         </div>
     </ng-template>
@@ -161,7 +161,7 @@
 </div>
 
 <!--Truong hop khac-->
-<div *ngIf="!((this.filter_status == 20 || this.filter_status == 33 || this.filter_status == 30) && this.isOrg == 'off')&& this.typeDisplay !='release'" class="container-fluid">
+<div *ngIf="!((this.filter_status == 20 || this.filter_status == 33 || this.filter_status == 30 ||  this.typeDisplay =='release') && this.isOrg == 'off')" class="container-fluid">
     <ng-template [ngIf]="!roleMess">
         <div class="col-md-12" style="padding-top: 20px;">
             <div class="input-line search">
@@ -211,7 +211,7 @@
 
                             <div class="row">
                                 <div class="item_contract_infor">{{'contract.status' | translate}}:
-                                    <span class="status_blue">{{item.status | pipe | translate}}
+                                    <span class="status_blue">{{this.filter_status | pipe | translate}}
                                         {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                         translate}}</span>
                                 </div>
@@ -280,7 +280,7 @@
         <div class="contract_footer">
             <div class="footer_contract_per_page">
                 <div>Hiển thị&nbsp;</div>
-                <select (change)="changePageNumber($event)">
+                <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
                     <option value="" hidden>10</option>
                     <option *ngFor="let d of this.pageOptions">{{d}}</option>
                 </select>
@@ -290,7 +290,7 @@
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
             </div>
-            <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}
+            <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
             </div>
         </div>
     </ng-template>
@@ -348,7 +348,7 @@
 
                             <div class="row">
                                 <div class="item_contract_infor">{{'contract.status' | translate}}:
-                                    <span class="status_blue">{{item.status | pipe | translate}}
+                                    <span class="status_blue">{{this.filter_status | pipe | translate}}
                                         {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                         translate}}</span>
                                 </div>
@@ -397,6 +397,9 @@
                         <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13 && this.isOrg == 'off'">
                             <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
                         </div>
+                        <div class="div_icon" *ngIf="status == 'complete' && this.isOrg == 'off'">
+                            <img src="../../../assets/img/contract-liquidation.svg" class="img_icon" ngbTooltip="{{'contract.liquidation' | translate}}" (click)="addContractLiquidationNew(item.id);" />
+                        </div>
                     </div>
                     <div class="div_icon" *ngIf="status == 'cancel'">
                         <!-- <img src="../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="{{'reasson.cancel.contract' | translate}}" (click)="ViewReasonCancel(item.id)" /> -->
@@ -417,7 +420,7 @@
         <div class="contract_footer">
             <div class="footer_contract_per_page">
                 <div>Hiển thị&nbsp;</div>
-                <select (change)="changePageNumber($event)">
+                <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
                     <option value="" hidden>10</option>
                     <option *ngFor="let d of this.pageOptions">{{d}}</option>
                 </select>
@@ -427,7 +430,7 @@
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
             </div>
-            <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}
+            <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
             </div>
         </div>
     </ng-template>
@@ -491,7 +494,7 @@
 
                                 <div class="row">
                                     <div class="item_contract_infor">{{'contract.status' | translate}}:
-                                        <span class="status_blue">{{item.status | pipe | translate}}
+                                        <span class="status_blue">{{this.filter_status | pipe | translate}}
                                             {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                             translate}}</span>
                                     </div>
@@ -641,7 +644,7 @@
 
                                 <div class="row">
                                     <div class="item_contract_infor">{{'contract.status' | translate}}:
-                                        <span class="status_blue">{{item.status | pipe | translate}}
+                                        <span class="status_blue">{{this.filter_status | pipe | translate}}
                                             {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
                                             translate}}</span>
                                     </div>
