--- a/src/app/main/contract-folder/add-folder/add-folder.component.html
+++ b/src/app/main/contract-folder/add-folder/add-folder.component.html
@@ -3,9 +3,16 @@
     <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{ title | translate}}</h3>
   </div>
   <div class="folder-name">
-    <div class="input-data"><input type="text border"></div>
+    <div class="label-input">{{'folder.name' | translate}}&nbsp;<span style="color: red; padding: 0">*</span></div>
+    <div class="input-data-name"><input type="text border" [readonly]="this.action == 'openDetail'"></div>
+  </div>
+  <div class="folder-name">
+    <div class="label-input-description">{{'folder.description' | translate}}&nbsp;<span style="color: red; padding: 0">*</span></div>
+    <div class="input-data-description"><textarea type="text border" [readonly]="this.action == 'openDetail'"></textarea></div>
   </div>
   <div class="row" style="justify-content: center;padding-top: 10px;">
     <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
     <button class="save-button" (click)="dialog.closeAll()" type="button">{{'btn.save' | translate}}</button>
+</div>
+
 </div>
