--- a/src/app/main/contract-folder/delete-folder/delete-folder.component.html
+++ b/src/app/main/contract-folder/delete-folder/delete-folder.component.html
@@ -1,3 +1,13 @@
-<p>
-  delete-folder works!
-</p>
+<div class="container-fluid">
+  <div class="header">
+    <h3 class="label-header">{{'folder.delete' | translate}}</h3>
+  </div>
+  <div style="font-weight: bold; display: flex; justify-content: center;">
+      <h3 style="font-family: inherit;">{{'confirm.folder.delete' | translate}}</h3>
+  </div>
+  <div class="row" style="display: flex; justify-content: center;padding-top: 10px;">
+      <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
+      <button class="save-button" (click)="onSubmit()">{{'btn.delete' | translate}}</button>
+  </div>
+</div>
+ 
