--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -7,6 +7,7 @@
     flex: 1;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
   }
 
   .breadcrumb {
@@ -39,20 +40,16 @@
       }
     }
   }
-
-  .btn_submit {
-    margin-left: auto;
-  }
 }
 
 .btn_submit{
     border: 0px;
     border-radius: 5px;
-    height: 39px;
+    height: 37px;
     box-sizing: border-box;
     color: white;
     background-color: #106DB6;
-    font-size: 16px;
+    font-size: 13px;
     margin: 0 10px;
   }
   .input_text {
@@ -66,81 +63,216 @@
   .btn_search{
     align-self: flex-end;
   }
-  
-  #table {
-    border-collapse: collapse;
+
+  .search{
+    border: 1px solid #106DB6;
+    border-radius: 15px;
+    height: 38px;
+  }
+
+  .input-line {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  .input-text {
+    border: 0;
+    padding: 10px;
     width: 100%;
-    font-size: 13px;
-    font-family: font_lexend_deca;
+    outline:0px;
   }
-  #table td, #table th {
-    //border: 1px solid #ddd;
+
+  .input-img {
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  .item_folder {
+    border: 1px solid #106DB6;
+    border-radius: 10px;
     padding: 8px;
+    margin-top: 10px;
+    line-height: 24px;
   }
   
-  // #table tr:nth-child(even){background-color: #f2f2f2;}
+  .item_folder:hover{
+    background-color: rgb(255, 254, 254);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
   
-  #table tr:hover {background-color: #ddd;}
+  .item_folder_name {
+    font-weight: 500;
+    font-size: 16px;
+    color: #106DB6;
+    cursor: pointer;
+  }
   
-  #table th {
-    //text-align: center;
-    background-color: #E2ECF6;
+  .item_folder_infor{
+    color: #666666;
+  }
+  
+  .status_blue{
+    color: #027e21;
+  }
+  
+  .list_header{
+    color:#898989;
+    text-align: center;
+    padding: 12px 12px 0;
+    font-weight: 500;
+    // margin-top: 10px;
+  }
+  
+  .input-group-text{
+    padding: 8.5px;
+  }
+  .input-group-text i{
     color: #106DB6;
   }
-  
-  #table tr:last-child th:first-child {
-    border-top-left-radius: 10px;
+  .input-search{
+    height: 35px;
+    font-size: inherit;
   }
-  #table tr:last-child th:last-child {
-    border-top-right-radius: 10px;
+  .calendar_create, .folder_code{
+    text-align: center;
+    color:hsl(206, 84%, 39%)
   }
-  #table tr:last-child td:first-child {
-    border-bottom-left-radius: 10px;
+  .item_date{
+    padding-left: 3px;
   }
-  #table tr:last-child td:last-child {
-    border-bottom-right-radius: 10px;
+  .item_icon{
+    text-align: center;
+    color: #015393;
+  }
+  .btn_close {
+    width: 90px;
+    font-size: inherit;
+    background: #6c6c6d;
+    color: white;
+    border: 1px solid #808183;
+    margin: 0 10px;
+  }
+  .btn_add{
+    text-align: right;
+    align-self: flex-end;
+  }
+  .label_item{
+    padding: 10px 0px 5px;
+    color: #5e5e5e;
   }
   
   :host ::ng-deep {
-    .pi-fw {
-      color:  #106DB6;
-      margin-right: 5px;
+    .ngx-pagination {
+      padding: 0;
     }
-  
-    .p-paginator .p-paginator-pages .p-paginator-page{
-      color: black;
-      float: left;
-      padding: 8px 16px;
+    .ngx-pagination a, .ngx-pagination button {
       text-decoration: none;
-      transition: background-color .3s;
-      border: 1px solid #ddd;
-      margin: 4px;
-      height: 26px !important;
+      background: #f3f3f3;
+    }
+    .ngx-pagination li {
       width: 50px;
       border-radius: 5px;
-      background-color: #e6e6e6;
+    }
+    .ngx-pagination .pagination-previous a::before,
+    .ngx-pagination .pagination-previous.disabled::before {
+      font-family: 'Material Icons';
+      content: 'keyboard_arrow_left';
+      vertical-align: middle;
+      display: inline;
+      margin: 0;
+    }
+    .ngx-pagination .pagination-next a::after,
+    .ngx-pagination .pagination-next.disabled::after {
+      font-family: 'Material Icons';
+      content: 'keyboard_arrow_right';
+      vertical-align: middle;
+      display: inline;
+      margin: 0;
     }
   
-    .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
-      background-color: #2199e8;
-      color: white;
-      border: 1px solid #2199e8;
+    .p-selectbutton .p-button {
+      outline: 0 !important;
+      box-shadow: none !important;
+      height: 33px;
+      width: 50%;
+    }
+    .p-selectbutton .p-button.p-highlight {
+      background: #c5ebff;
+      border-color: #c5ebff;
+      color: #106DB6;
     }
   
-    .p-paginator-bottom .p-ripple{
-      padding: 10px;
-      border-width: 0 !important;
-      height: 26px !important;
-      width: 50px !important;
+    .p-dropdown {
+      border: 1px solid #106DB6;
+      border-radius: 5px;
+      height: 33px;
+      width: 100%;
+      outline: 0;
+      color: black !important;
     }
+    .p-dropdown-label {
+        padding: 5px 5px 5px 15px;
+    }
+  }
   
-    .p-datatable-table, .ng-star-inserted{
-      font-size: 16px;
-      font-family: font_lexend_deca;
+  .fa_icon{
+    font-size: 17px;
+    cursor: pointer;
+  }
+  .icon_red{
+    color: red;
+  }
+  
+  .folder_footer{
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer_title{
+    width: 120px;
+  }
+  .footer_pagination{
+    text-align: center;
+  }
+  .footer_page_number{
+    color: #0160AE
+  }
+  
+  ::ng-deep .multiselect-dropdown {
+    .selected-item {
+      max-width: 95% !important;
+      min-height: 38px;
+      height: auto;
     }
-    .p-datatable .p-paginator-bottom {
-      border-width: 0;
-    }
+  }
+  .div_icon{
+    padding: 0 10px;
+  }
+  .img_icon{
+    width: 18px;
+    cursor: pointer;
+  }
+  .img_icon:hover{
+    width: 30px;
+  }
+  .input_text {
+    padding-left: 10px;
+    outline: none;
+    height: 33px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #106DB6;
+  }
+  .btn_search{
+    align-self: flex-end;
+  }
+  
+  .calendar_create, .folder_code, .item_icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
   }
   
 
