text so luong hop dong mau do

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -195,8 +195,8 @@
           <div style="padding-left: 4px; width: 100%; margin: 0">{{'num.contract.use' | translate}}:</div>
         </div>
         <div class="second-col">
-          <div style=" width: 100%; margin: 0">{{numContractBuy}} </div>
-          <div style=" width: 100%; margin: 0">{{numContractUse}} </div>
+          <div style=" width: 100%; margin: 0; color: red">{{numContractBuy}} </div>
+          <div style=" width: 100%; margin: 0; color: red">{{numContractUse}} </div>
         </div>
 
 
