--- a/src/app/main/digital-certificate/digital-certificate-detail/digital-certificate-detail.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-detail/digital-certificate-detail.component.html
@@ -9,7 +9,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-line">
-          <input type="text" [(ngModel)]="emailUser" class="input-text" readonly/>
+          <input type="text" [(ngModel)]="emailUser" [innerText]="emailUser" class="input-text" readonly/>
         </div>
       </div>
     </div>
