fix navigation sidebar

--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -573,6 +573,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
 }
 .sub_title{
   padding-left: 35px;
+  display: flex
 }
 .sub_title_add{
   display: inline-block;
