--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -138,6 +138,10 @@
     text-align: center;
     color:hsl(206, 84%, 39%)
   }
+  .calendar_last_updated, .folder_code {
+    text-align: center;
+    color:hsl(145, 79%, 38%)
+  }
   .item_date{
     padding-left: 3px;
   }
@@ -274,6 +278,7 @@
     justify-content: center;
     text-align: center;
   }
+
   
 
 
