--- a/src/app/main/contract-folder/add-folder/add-folder.component.html
+++ b/src/app/main/contract-folder/add-folder/add-folder.component.html
@@ -4,15 +4,18 @@
   </div>
   <div class="folder-name">
     <div class="label-input">{{'folder.name' | translate}}&nbsp;<span style="color: red; padding: 0">*</span></div>
-    <div class="input-data-name"><input type="text border" [readonly]="this.action == 'openDetail'"></div>
+    <div class="input-data-name" [ngStyle]="getStyleDetail()"><input type="text border" [readonly]="this.action == 'openDetail'" [ngStyle]="getStyleDetail()" [(ngModel)]="this.name"></div>
   </div>
   <div class="folder-name">
     <div class="label-input-description">{{'folder.description' | translate}}&nbsp;<span style="color: red; padding: 0">*</span></div>
-    <div class="input-data-description"><textarea type="text border" [readonly]="this.action == 'openDetail'"></textarea></div>
+    <div class="input-data-description" [ngStyle]="getStyleDetail()"><textarea type="text border" [ngStyle]="getStyleDetail()" [readonly]="this.action == 'openDetail'" [(ngModel)]="this.description"></textarea></div>
   </div>
   <div class="row" style="justify-content: center;padding-top: 10px;">
     <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
-    <button class="save-button" (click)="dialog.closeAll()" type="button">{{'btn.save' | translate}}</button>
+    <button *ngIf="this.action != 'openDetail'" class="save-button" (click)="submit()" type="button">{{'btn.save' | translate}}</button>
 </div>
 
 </div>
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+</ngx-spinner>
