--- a/src/app/main/contract-folder/delete-folder/delete-folder.component.html
+++ b/src/app/main/contract-folder/delete-folder/delete-folder.component.html
@@ -10,4 +10,7 @@
       <button class="save-button" (click)="onSubmit()">{{'btn.delete' | translate}}</button>
   </div>
 </div>
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+</ngx-spinner>
  
