chỉnh sửa ngày hết hạn ký

--- a/src/app/main/contract/edit-expiration-signing-time/edit-expiration-signing-time.component.html
+++ b/src/app/main/contract/edit-expiration-signing-time/edit-expiration-signing-time.component.html
@@ -16,7 +16,7 @@
 
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" type="button" (click)="dialog.closeAll()">{{'cancel' | translate}}</button>
-            <button class="save-button">{{'btn.save' | translate}}</button>
+            <button class="save-button" (click)="save()">{{'btn.save' | translate}}</button>
         </div>
     </div>
   </div>
